feat(backend): implemented bare-bones RuleEndpoint functionality